# FYS4411-Project-2

./: .gitignore  README.md  README_src.md  README_src.md:Zone.Identifier  model.py
src/NN_VMC/P1_Teresa/: CMakeLists.txt  NNsampler.cpp  NNsampler.h  RBMsampler.cpp  RBMsampler.h  README.md  common.cpp  common.h  compile_project  main.cpp  optimizer.cpp  optimizer.h  rbmoptimizer.h  sampler.cpp  sampler.h  system.cpp  system.h  utilities.cpp  utilities.h
src/NN_VMC/P1_Teresa/Hamiltonians/: elliptictrap.cpp  harmonicoscillator.cpp  harmonicoscillator.h  interactingelliptictrap.cpp  interactingelliptictrap.h  rbminteractrap.cpp  rbminteractrap.h  repulsiveho.cpp  repulsiveho.h
src/NN_VMC/P1_Teresa/Solvers/: importancesampling.cpp
src/NN_VMC/P1_Teresa/WaveFunctions/: anisotropicgaussian.cpp  anisotropicgaussian.h  boltzmannmachine.cpp  boltzmannmachine.h  correlatedgaussian.cpp  correlatedgaussian.h  neuralnetwork.cpp  neuralnetwork.h  nn_envelope.cpp  nn_envelope.h  simplegaussian.cpp  simplegaussian.h  wavefunction.h
src/NN_VMC/P1_Teresa/build_release/: CMakeCache.txt  Makefile  cmake_install.cmake
src/NN_VMC/P1_Teresa/data/.py/: plot_E_vs_alpha.py  plot_E_vs_alpha_hs.py  plot_cpu_time_bf_vs_is.py  plot_onebody_densities.py  plot_optimization_comparison.py  plot_optimizer_path.py  plot_time_vs_N.py  statistical_analysis.py
src/NN_VMC/P1_Teresa/data/.txt/: E_vs_alpha_ideal_mode_bf_N100_D3.txt  e_history_is_dt_0p02_RBM_hidden_4_N1_D3_blocking_summary.txt  energy_interac_is_dt_0p02_RBM_hidden_2_N2_D2.txt  energy_interac_is_dt_0p02_RBM_hidden_4_N2_D2.txt  energy_interacmode_is_RBM_hidden_2_dt_0p02_N10_D3.txt  energy_interacmode_is_RBM_hidden_2_dt_0p02_N2_D2.txt  energy_is_dt_0p02_RBM_hidden_2_N2_D2.txt  (+42 more)
src/NN_VMC/RBM/: .gitignore  CMakeLists.txt  README.md  main.cpp  particle.h  utilities.cpp  utilities.h  vmc
src/NN_VMC/RBM/Hamiltonians/: elliptictrap.h  rbminteractrap.cpp  rbminteractrap.h
src/NN_VMC/RBM/InitialStates/: initialstate.cpp  initialstate.h
src/NN_VMC/RBM/Solvers/: importancesampling.h  metropolis.cpp
src/NN_VMC/RBM/WaveFunctions/: wavefunction.h
src/ffwd_NN_VMC/: .gitignore  CMakeLists.txt  README.md  VMCOptimizer.cpp  VMCOptimizer_NN.cpp  VMCOptimizer_NN.h  build_debug.sh  build_release.sh  common.cpp  common.h  config.cpp  config.h  config.json  display2.ipynb  main.cpp  mcengine.cpp  mcengine.h  onebodydensity.cpp  onebodydensity.h  particle.h  system.cpp  system.h
src/ffwd_NN_VMC/Hamiltonians/: coulombho.cpp  coulombho.h  hamiltonian.cpp  hamiltonian.h  harmonicoscillator.cpp  harmonicoscillator.h  repulsiveho.cpp  repulsiveho.h
src/ffwd_NN_VMC/InitialStates/: initialstate.cpp  initialstate.h
src/ffwd_NN_VMC/Samplers/: NNsampler.cpp  NNsampler.h  densitysampler.cpp  densitysampler.h  energysampler.cpp  energysampler.h  sampler.h
src/ffwd_NN_VMC/Solvers/: metropolis.cpp  metropolishastings.cpp  montecarlo.cpp  montecarlo.h
src/ffwd_NN_VMC/WaveFunctions/: boltzmannmachine.cpp  ellipticgaussian.cpp  ellipticgaussian.h  neuralnetwork.cpp  neuralnetwork.h  nn_envelope.cpp  nn_envelope.h  repulsiveellipticgaussian.cpp  repulsiveellipticgaussian.h  simplegaussian.h  wavefunction.cpp  wavefunction.h  wavefunctioncache.cpp  wavefunctioncache.h
src/ffwd_NN_VMC/iofiles/: blocking_results.csv  details_results.csv  log.csv  logNN.csv  logNN_2D2N.csv
src/ffwd_NN_VMC/libtorch/: build-hash  build-version
src/ffwd_NN_VMC/libtorch/lib/: libshm.so:Zone.Identifier
src/ffwd_NN_VMC/logs_NN/: run_20260515_181114.csv  run_20260515_182543.csv  run_20260515_184859.csv  run_20260515_185113.csv  run_20260515_210720.csv  run_20260515_214327.csv  run_20260515_221052.csv  run_20260515_223805.csv  run_20260515_230529.csv  run_20260515_234851.csv  run_20260516_104633.csv  run_20260516_110210.csv  run_20260516_215843.csv  run_20260516_222737.csv  run_20260518_141002.csv  run_20260518_153550.csv  run_20260518_171602.csv  run_20260518_180909.csv  run_20260518_191519.csv  run_20260519_162215.csv  run_20260519_163600.csv  run_20260520_100903.csv  run_20260522_121140.csv
src/ffwd_NN_VMC/logs_OBD/: run_20260515_184459.csv  run_20260515_185113.csv  run_20260515_210720.csv  run_20260515_214327.csv  run_20260515_223805.csv  run_20260515_230529.csv  run_20260518_141002.csv  run_20260518_153550.csv  run_20260519_163600.csv  run_20260520_100903.csv  run_20260521_190138.csv  run_20260521_191807.csv  run_20260521_195341.csv  run_20260521_200556.csv  run_20260522_121140.csv
(+380 files in other folders)
